[REFACTOR] Implement DTOMapper and remove unused imports