@@ -2,26 +2,21 @@ package snackscription.subscription.service;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import snackscription.subscription.dto.DTOMapper;
 import snackscription.subscription.dto.SubscriptionDTO;
-import snackscription.subscription.factory.SubscriptionFactory;
-import snackscription.subscription.model.ShippingAddress;
 import snackscription.subscription.model.Subscription;
 import snackscription.subscription.repository.SubscriptionRepository;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class SubscriptionServiceImpl implements SubscriptionService{
     @Autowired
     private SubscriptionRepository subscriptionRepository;
 
-    private SubscriptionFactory subscriptionFactory = new SubscriptionFactory();
-
     @Override
     public Subscription save(SubscriptionDTO subscriptionDTO){
-        Subscription subscription = convertDTOtoModel(subscriptionDTO);
+        Subscription subscription = DTOMapper.convertDTOtoModel(subscriptionDTO);
         return subscriptionRepository.save(subscription);
     }
 
@@ -29,8 +24,8 @@ public class SubscriptionServiceImpl implements SubscriptionService{
     public List<SubscriptionDTO> findAll(){
         return subscriptionRepository.findAll()
                 .stream()
-                .map(this::convertModelToDto)
-                .collect(Collectors.toList());
+                .map(DTOMapper::convertModelToDto)
+                .toList();
     }
 
     @Override
@@ -41,7 +36,7 @@ public class SubscriptionServiceImpl implements SubscriptionService{
         Subscription subscription = subscriptionRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("Subscription isn't found"));
 
-        return convertModelToDto(subscription);
+        return DTOMapper.convertModelToDto(subscription);
     }
 
     @Override
@@ -53,7 +48,7 @@ public class SubscriptionServiceImpl implements SubscriptionService{
         Subscription subscription = subscriptionRepository.findById(subscriptionDTO.getId())
                 .orElseThrow(() -> new IllegalArgumentException("Subscription isn't found"));
 
-        updateSubscription(subscription, subscriptionDTO);
+        DTOMapper.updateSubscription(subscription, subscriptionDTO);
         return subscriptionRepository.update(subscription);
     }
 
@@ -66,33 +61,5 @@ public class SubscriptionServiceImpl implements SubscriptionService{
             throw new IllegalArgumentException("Subscription not found");
         }
         subscriptionRepository.delete(id);
-    }
-
-    public SubscriptionDTO convertModelToDto(Subscription subscription){
-        SubscriptionDTO subscriptionDTO = new SubscriptionDTO();
-        subscriptionDTO.setId(subscription.getId());
-        subscriptionDTO.setUniqueCode(subscription.getUniqueCode());
-        subscriptionDTO.setUserId(subscription.getUserId());
-        subscriptionDTO.setSubscriptionBoxId(subscription.getSubscriptionBoxId());
-        subscriptionDTO.setType(subscription.getType());
-        subscriptionDTO.setStatus(subscription.getStatus());
-        subscriptionDTO.setShippingAddress(subscription.getShippingAddress());
-        subscriptionDTO.setDateCreated(subscription.getDateCreated());
-
-        return subscriptionDTO;
-    }
-
-    public Subscription convertDTOtoModel(SubscriptionDTO subscriptionDTO){
-        String type = subscriptionDTO.getType();
-        String userId = subscriptionDTO.getUserId();
-        String subscriptionBoxId = subscriptionDTO.getSubscriptionBoxId();
-        ShippingAddress shippingAddress = subscriptionDTO.getShippingAddress();
-        return subscriptionFactory.create(type, userId, subscriptionBoxId, shippingAddress);
-    }
-
-    public Subscription updateSubscription(Subscription subscription, SubscriptionDTO subscriptionDTO) {
-        Optional.ofNullable(subscriptionDTO.getShippingAddress()).ifPresent(subscription::setShippingAddress);
-        Optional.ofNullable(subscriptionDTO.getStatus()).ifPresent(subscription::setStatus);
-        return subscription;
     }
 }
